deploy: a02b998bb927818a877612472cca4174fb63a823

--- a/complete-example-of-a-spring-mvc-3.2-project/index.html
+++ b/complete-example-of-a-spring-mvc-3.2-project/index.html
@@ -408,7 +408,7 @@ If you liked this article, please share! ❤️
 <div class=categories><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true"><path d="M22 19a2 2 0 01-2 2H4a2 2 0 01-2-2V5A2 2 0 014 3H9l2 3h9a2 2 0 012 2z"/></svg>
 <span class=screen-reader-text>Categories: </span><a class=category href=/categories/spring/>spring</a>, <a class=category href=/categories/spring-mvc/>spring-mvc</a></div>
 <div class=tags><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true"><path d="M20.59 13.41l-7.17 7.17a2 2 0 01-2.83.0L2 12V2H12l8.59 8.59a2 2 0 010 2.82z"/><line x1="7" y1="7" x2="7" y2="7"/></svg>
-<span class=screen-reader-text>Tags: </span><a class=tag href=/tags/spring-java-config/>spring-java-config</a>, <a class=tag href=/tags/spring-mvc/>spring-mvc</a>, <a class=tag href=/tags/featured/>featured</a></div>
+<span class=screen-reader-text>Tags: </span><a class=tag href=/tags/spring-java-config/>spring-java-config</a>, <a class=tag href=/tags/spring-mvc/>spring mvc</a>, <a class=tag href=/tags/featured/>featured</a></div>
 </div>
 </footer>
 </article>
