deploy: 9710fbbb970559b8d199586e9bf1efb02d6f2c7a

--- a/run-your-frontend-alongside-spring-boot/index.html
+++ b/run-your-frontend-alongside-spring-boot/index.html
@@ -249,6 +249,11 @@ reach developer nirvana.</p>
 <li><a href=https://geowarin.github.io/tags/javascript/>javascript</a></li>
 </ul>
 <nav class=paginav>
+<a class=prev href=https://geowarin.github.io/thumbnails-in-linux/>
+<span class=title>« Prev Page</span>
+<br>
+<span>Thumbnails in Linux</span>
+</a>
 <a class=next href=https://geowarin.github.io/share-intellij-run-configurations-with-git/>
 <span class=title>Next Page »</span>
 <br>
