--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 </footer>
 </article>
 <article class=post-entry>
+<figure class=entry-cover><img loading=lazy src=https://geowarin.github.io/cover.png alt>
+</figure>
 <header class=entry-header>
 <h2>Thumbnails in Linux
 </h2>
