deploy: 6515efdea97b4a84c5b17fddfa0757ad8a342219

--- a/thumbnails-in-linux/index.html
+++ b/thumbnails-in-linux/index.html
@@ -145,6 +145,11 @@ MimeType=model/gltf+json;model/gltf.binary;
 <li><a href=https://geowarin.com/tags/3d/>3D</a></li>
 </ul>
 <nav class=paginav>
+<a class=prev href=https://geowarin.com/convert-blend-files-to-gltf-using-a-script/>
+<span class=title>« Prev Page</span>
+<br>
+<span>Convert blend files to gltf using a script</span>
+</a>
 <a class=next href=https://geowarin.com/run-your-frontend-alongside-spring-boot/>
 <span class=title>Next Page »</span>
 <br>
