--- a/convert-blend-files-to-gltf-using-a-script/index.html
+++ b/convert-blend-files-to-gltf-using-a-script/index.html
@@ -137,6 +137,11 @@ a bunch of blend files in on click.</p>
 <li><a href=https://geowarin.com/tags/gltf/>GLTF</a></li>
 </ul>
 <nav class=paginav>
+<a class=prev href=https://geowarin.com/typescript-refactorings/>
+<span class=title>« Prev Page</span>
+<br>
+<span>Typescript refactorings</span>
+</a>
 <a class=next href=https://geowarin.com/thumbnails-in-linux/>
 <span class=title>Next Page »</span>
 <br>
