deploy: 3dd47b1cc5d63e1ebf5c0e86e758cc0da3096028

--- a/c-sharp-code-style/index.html
+++ b/c-sharp-code-style/index.html
@@ -121,7 +121,7 @@ tries to remove ambiguities from the official Microsoft guidelines.</p>
 <p>And, perhaps more importantly, naming rules for <code>public</code> vs <code>private</code> stuff are not ambiguous
 and simple to follow.</p>
 <h2 id=tooling-via-editor-config>Tooling via editor config<a hidden class=anchor aria-hidden=true href=#tooling-via-editor-config>#</a></h2>
-<p>Both Visual Studio and Rider support coding style via editorconfig:</p>
+<p>Both Visual Studio and Rider support coding style via <a href=https://editorconfig.org/>editorconfig</a>:</p>
 <ul>
 <li><a href=https://www.jetbrains.com/help/rider/2021.3/Using_EditorConfig.html>Rider</a></li>
 <li><a href="https://docs.microsoft.com/en-us/visualstudio/ide/code-styles-and-code-cleanup?view=vs-2022">Visual Studio</a></li>
