--- a/c-sharp-code-style/index.html
+++ b/c-sharp-code-style/index.html
@@ -180,6 +180,11 @@ Do you have tools to enforce it?</p>
 <li><a href=https://geowarin.com/tags/csharp/>CSharp</a></li>
 </ul>
 <nav class=paginav>
+<a class=prev href=https://geowarin.com/what-is-a-good-unit-test/>
+<span class=title>« Prev Page</span>
+<br>
+<span>What is a good unit test?</span>
+</a>
 <a class=next href=https://geowarin.com/typescript-refactorings/>
 <span class=title>Next Page »</span>
 <br>
