--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
 </article>
 <article class=post-entry>
 <figure class=entry-cover>
+<img loading=lazy srcset="https://geowarin.com/what-is-a-good-unit-test/images/cover_hu4a0e6ad64d40bd170664f808e06fabd9_112257_360x0_resize_box_3.png 360w ,https://geowarin.com/what-is-a-good-unit-test/images/cover_hu4a0e6ad64d40bd170664f808e06fabd9_112257_480x0_resize_box_3.png 480w ,https://geowarin.com/what-is-a-good-unit-test/images/cover_hu4a0e6ad64d40bd170664f808e06fabd9_112257_720x0_resize_box_3.png 720w ,https://geowarin.com/what-is-a-good-unit-test/images/cover_hu4a0e6ad64d40bd170664f808e06fabd9_112257_1080x0_resize_box_3.png 1080w ,https://geowarin.com/what-is-a-good-unit-test/images/cover.png 1144w" sizes="(min-width: 768px) 720px, 100vw" src=https://geowarin.com/what-is-a-good-unit-test/images/cover.png alt width=1144 height=596>
+</figure>
+<header class=entry-header>
+<h2>What is a good unit test?
+</h2>
+</header>
+<section class=entry-content>
+<p>What constitutes good unit test might be a little more involved that you think. Let’s reflect on the practice to make sure that we test our applications as efficiently as possible.</p>
+</section>
+<footer class=entry-footer><span title="2022-02-18 12:50:57 +0100 +0100">February 18, 2022</span>&nbsp;·&nbsp;6 min&nbsp;·&nbsp;Geoffroy Warin</footer>
+<a class=entry-link aria-label="post link to What is a good unit test?" href=https://geowarin.com/what-is-a-good-unit-test/></a>
+</article>
+<article class=post-entry>
+<figure class=entry-cover>
 <img loading=lazy srcset="https://geowarin.com/c-sharp-code-style/images/cover_hu24e57148ff8d1ac1f8fbb93844576416_31360_360x0_resize_box_3.png 360w ,https://geowarin.com/c-sharp-code-style/images/cover_hu24e57148ff8d1ac1f8fbb93844576416_31360_480x0_resize_box_3.png 480w ,https://geowarin.com/c-sharp-code-style/images/cover.png 680w" sizes="(min-width: 768px) 720px, 100vw" src=https://geowarin.com/c-sharp-code-style/images/cover.png alt width=680 height=192>
 </figure>
 <header class=entry-header>
@@ -192,17 +206,6 @@
 </section>
 <footer class=entry-footer><span title="2018-02-25 11:33:45 +0100 +0100">February 25, 2018</span>&nbsp;·&nbsp;12 min&nbsp;·&nbsp;Geoffroy Warin</footer>
 <a class=entry-link aria-label="post link to What I Did Wrong as a CTO" href=https://geowarin.com/what-i-did-wrong-as-a-cto/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Consuming APIs with Redux, the Shasta way
-</h2>
-</header>
-<section class=entry-content>
-<p>Connecting your REST API to Redux used to be hard… But that was before Shasta!</p>
-</section>
-<footer class=entry-footer><span title="2016-04-12 00:00:00 +0000 UTC">April 12, 2016</span>&nbsp;·&nbsp;7 min&nbsp;·&nbsp;Geoffroy Warin</footer>
-<a class=entry-link aria-label="post link to Consuming APIs with Redux, the Shasta way" href=https://geowarin.com/consuming-apis-with-redux-the-shasta-way/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
