deploy: 67ff13b0779705b4f745670e3dfd27b966dc1819

--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
 </article>
 <article class=post-entry>
 <figure class=entry-cover>
+<img loading=lazy srcset="https://geowarin.com/writing-naive-code/images/cover_huaeba624fed229e85cb710efca71325c8_1325967_360x0_resize_box_3.png 360w ,https://geowarin.com/writing-naive-code/images/cover_huaeba624fed229e85cb710efca71325c8_1325967_480x0_resize_box_3.png 480w ,https://geowarin.com/writing-naive-code/images/cover_huaeba624fed229e85cb710efca71325c8_1325967_720x0_resize_box_3.png 720w ,https://geowarin.com/writing-naive-code/images/cover_huaeba624fed229e85cb710efca71325c8_1325967_1080x0_resize_box_3.png 1080w ,https://geowarin.com/writing-naive-code/images/cover_huaeba624fed229e85cb710efca71325c8_1325967_1500x0_resize_box_3.png 1500w ,https://geowarin.com/writing-naive-code/images/cover.png 2700w" sizes="(min-width: 768px) 720px, 100vw" src=https://geowarin.com/writing-naive-code/images/cover.png alt width=2700 height=1996>
+</figure>
+<header class=entry-header>
+<h2>Writing naive code
+</h2>
+</header>
+<section class=entry-content>
+<p>Is writing naive code the best way to write code?</p>
+</section>
+<footer class=entry-footer><span title="2022-11-17 12:56:42 +0100 +0100">November 17, 2022</span>&nbsp;·&nbsp;4 min&nbsp;·&nbsp;Geoffroy Warin</footer>
+<a class=entry-link aria-label="post link to Writing naive code" href=https://geowarin.com/writing-naive-code/></a>
+</article>
+<article class=post-entry>
+<figure class=entry-cover>
 <img loading=lazy srcset="https://geowarin.com/what-is-a-good-unit-test/images/cover_hu4a0e6ad64d40bd170664f808e06fabd9_112257_360x0_resize_box_3.png 360w ,https://geowarin.com/what-is-a-good-unit-test/images/cover_hu4a0e6ad64d40bd170664f808e06fabd9_112257_480x0_resize_box_3.png 480w ,https://geowarin.com/what-is-a-good-unit-test/images/cover_hu4a0e6ad64d40bd170664f808e06fabd9_112257_720x0_resize_box_3.png 720w ,https://geowarin.com/what-is-a-good-unit-test/images/cover_hu4a0e6ad64d40bd170664f808e06fabd9_112257_1080x0_resize_box_3.png 1080w ,https://geowarin.com/what-is-a-good-unit-test/images/cover.png 1144w" sizes="(min-width: 768px) 720px, 100vw" src=https://geowarin.com/what-is-a-good-unit-test/images/cover.png alt width=1144 height=596>
 </figure>
 <header class=entry-header>
@@ -195,17 +209,6 @@
 </section>
 <footer class=entry-footer><span title="2019-12-20 21:04:54 +0100 +0100">December 20, 2019</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Geoffroy Warin</footer>
 <a class=entry-link aria-label="post link to Debugging Webflux with IntelliJ" href=https://geowarin.com/debugging-webflux-with-intellij/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>What I Did Wrong as a CTO
-</h2>
-</header>
-<section class=entry-content>
-<p>I spent one year as a CTO for a startup. Here are some technical decisions I came to regret and those that I would make again in my next project</p>
-</section>
-<footer class=entry-footer><span title="2018-02-25 11:33:45 +0100 +0100">February 25, 2018</span>&nbsp;·&nbsp;12 min&nbsp;·&nbsp;Geoffroy Warin</footer>
-<a class=entry-link aria-label="post link to What I Did Wrong as a CTO" href=https://geowarin.com/what-i-did-wrong-as-a-cto/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
