--- a/what-is-a-good-unit-test/index.html
+++ b/what-is-a-good-unit-test/index.html
@@ -230,6 +230,11 @@ tests are a tool that should make the code easier write and to change.</p>
 <li><a href=https://geowarin.com/tags/testing/>testing</a></li>
 </ul>
 <nav class=paginav>
+<a class=prev href=https://geowarin.com/writing-naive-code/>
+<span class=title>« Prev Page</span>
+<br>
+<span>Writing naive code</span>
+</a>
 <a class=next href=https://geowarin.com/c-sharp-code-style/>
 <span class=title>Next Page »</span>
 <br>
